<resources>
    <string name="app_name">VirTravel</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_btn_login">Sign up now</string>
    <string name="name_first">First Name</string>
    <string name="name_last">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="gender_must_be_chosen">Gender must be chosen</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sample_desc">The Louvre is not only one of the best art museums in the world, it’s also one of the biggest. There are 35,000 objects on display out of a collection of 380,000. This walking tour features part 1 of the Louvre Museum in Denon Wing. First, a walk around before accessing the museum floor. Further on, a great display of the Greek and Roman antiquities and its famous statues; Aphrodite, Vénus de Milo, Winged Victory of Samothrace and The Virgin and Child with four Angels . Followed by the decorative arts (paintings) area from Spain, France, Italy including the Mona Lisa.</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDvrCtBDM4wL5GKdKR-UwoL9YdYYZ4yioM</string>
    <string name="title_activity_maps">Map</string>
</resources>